<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/retrieve_native_ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load" />

            <CheckBox
                android:id="@+id/context_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_app_context"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/show_native_ads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_native_ad" />

        </LinearLayout>


        <TextView
            android:id="@+id/status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white" />
    </LinearLayout>


</LinearLayout>